--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index",
     "test": "jest --verbose --coverage",
-    "lint": "eslint ./src/**/*.js --fix",
+    "lint": "eslint './src/**/*.js' --fix",
     "start:db": "mkdir -p ./db && mongod --dbpath ./db",
     "watch": "nodemon index.js"
   },
